add update status table
